data/derived/comb/progs/unify/prog3597.ml.out
Characters 142-147:
  if List.mem h seen then h::seen' 
                             ^^^^^
Error: This expression has type 'a but an expression was expected of type
         'a list
       The type variable 'a occurs inside 'a list
